--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,65 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 :root{
-    --primary-color: #FCD34D;
+    --Extra-color: #FCD34D;
     --secondary-color: #DC2626;
     --button-color:#E5E7EB;
-    --link-color:#BE185D;
+    --primary-color:#BE185D;
+    --header-color:#374151
+}
+body{
+    margin: 0px;
+}
+hr{
+    margin: 2rem 0rem;
+}
+
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.primary-link{
+    
+    background-color: var(--primary-color);
+    color: white;
+    padding: 0.5rem;
+    border-radius: 0.35rem;
+}
+
+.secondary-link{
+   color: var(--primary-color);
+   border: 1px solid black;
+   border-radius: 0.35rem;
+   padding: 0.5rem;
+}
+
+.comtainer{
+    padding: 0rem 1rem;
+}
+
+.container-center{
+    max-width:600px;
+    margin: auto;
+    /* padding: 1rem 1rem; */
+}
+
+
+
+.list{
+    list-style: none;
+}
+
+.list-display{
+   display: inline ;
 }
 
 .nav{
-    background-color: var(--link-color);
+    background-color: var(--primary-color);
     padding: 1rem;
-   border-top-left-radius: 2rem;
-   /* border-top-right-radius: 2rem; */
+   border-bottom-left-radius: 2rem;
     color:white;
+   width: auto;
 }
 
 .nav-font{
@@ -34,19 +81,62 @@ body{
     text-align: right;
     border-radius: none;
     border-top-left-radius: none; 
+    
 }
 
 .nav-list-display{
     display: inline;
-    /* color: var(--button-color); */
-    font-weight: bold;
+    font-weight: 550;
     color:black;
     background-color: var(--button-color);  
-    /* border-top-left-radius: 0rem;
-    border-bottom-left-radius: 0rem;
-    border-top-right-radius: 0rem; */
     border-radius: 0.7rem 0.7rem;
+    /* margin: 0.25rem 0.25rem; */
 }
+
+.link-active{
+    font-weight: bolder;
+}
+
+.hero{
+padding:2rem;
+}
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+.hero .hero-heading{
+    text-align: center;
+    color: var(--header-color);
+    padding-top: 0.7rem;
+} 
+
+.header-span{
+    color: var(--primary-color);
+}
+
+.side h1{
+    text-align: center;
+}
+
+.ow{
+    background-color: #E5E7EB; 
+    padding: 1rem;
+}
+
+.footer{
+
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-bottom-right-radius: 2rem;
+}
+
+.footer .link{
+    color: white;
+}
+
 
 
 
